# Make-Table-Backend

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 02f55123f71c_.py  088f06de5de8_.py  0e746c6ea63b_.py  1547e275bac7_.py  178faac66c4a_.py  40392e408056_.py  440f094336ef_.py  4479cb4a940e_.py  4b02726981f8_.py  5018f78d3fd3_.py  523778263d45_.py  573fb30e80ae_.py  81902bbd914c_.py  882b7af62d71_.py  925261a550da_initial_migration.py  94b14bd42472_.py  9921a6ad0b1a_.py  ac8707cf4491_.py  b120c9aac327_initial_tables.py  cca30db599c5_.py  de6d6aca61b9_.py  dff3d3148ba7_.py  e9ee67772a9e_.py  f94f9ec696dd_.py  f9b64d6d8caf_.py  ff1145ccc381_.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  class_.py  generation.py  subject.py  teacher.py  teacher_assignment.py  timetable.py  timetable_entry.py
app/core/: celery.py  config.py  exceptions.py  security.py
app/db/: base_class.py  session.py
app/models/: __init__.py  assocoations.py  class_.py  enums.py  subject.py  teacher.py  teacher_assignment.py  timetable.py  timetable_entry.py  token.py  user.py
app/schemas/: class_.py  generation.py  subject.py  teacher.py  teacher_assignment.py  timetable.py  timetable_entry.py  user.py
app/services/: class_service.py  subject_service.py  teacher_assignment_service.py  teacher_service.py  timetable_entry_service.py  user_service.py
app/services/timetable_service/: generator.py  timetable_service.py
app/worker/: tasks.py
(+4 files in other folders)
